--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "cloudinary": "^1.41.0",
     "daisyui": "^4.4.17",
     "mongoose": "^8.0.2",
     "next": "14.0.3",
